K8S/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
    name: core
---
apiVersion: v1
kind: Namespace
metadata:
    name: auth
---
apiVersion: v1
kind: Namespace
metadata:
    name: mq
