K8S/core-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: core-depl
  namespace: core
  labels:
    app: core-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: core-backend
  template:
    metadata:
      labels:
        app: core-backend
    spec:
      nodeSelector:
        workload: core
      containers:
      - name: core-backend
        image: goldenhand/cloud-computing-core:latest
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: "1Gi"
            cpu: "500m"
          requests:
            memory: "512Mi"
            cpu: "250m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: core-clusterip-srv
  namespace: core 
  labels:
    app: core-backend
spec:
  type: ClusterIP
  selector:
    app: core-backend
  ports:
    - name: http
      port: 8080
      targetPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: core-loadbalancer
  namespace: core
spec:
  type: LoadBalancer
  selector:
    app: core-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
