K8S/mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-depl
  namespace: auth
  labels:
    app: mysql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      nodeSelector:
        workload: auth
      containers:
        - name: mysql
          image: mysql:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3306
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: var-lib-mysql
            - mountPath: /docker-entrypoint-initdb.d
              name: init-script
      volumes:
        - name: var-lib-mysql
          persistentVolumeClaim:
            claimName: mysql-claim
        - name: init-script
          configMap:
            name: mysql-init-script
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-clusterip-srv
  namespace: auth
spec:
  type: ClusterIP
  selector:
    app: mysql
  ports:
  - name: mysql
    protocol: TCP
    port: 3306
    targetPort: 3306
