K8S/postgresql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgresql-depl
  namespace: core
  labels:
    app: postgresql
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgresql
  template:
    metadata:
      labels:
        app: postgresql
    spec:
      nodeSelector:
        workload: core
      containers:
        - name: postgresql
          image: postgres:13.13-bullseye
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
          volumeMounts:
            - mountPath: /var/lib/psql/data
              name: var-lib-postgresdb
      volumes:
        - name: var-lib-postgresdb
          persistentVolumeClaim:
            claimName: postgresql-claim
---
apiVersion: v1
kind: Service
metadata:
  name: postgresql-clusterip-srv
  namespace: core
spec:
  type: ClusterIP
  selector:
    app: postgresql
  ports:
  - name: postgresql
    protocol: TCP
    port: 5432
    targetPort: 5432
