K8S/activemq-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mq-allow-auth-core-backend
  namespace: mq
spec:
  podSelector:
    matchLabels:
      app: activemq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: auth
          podSelector:
            matchLabels:
              app: auth-backend
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: core
          podSelector:
            matchLabels:
              app: core-backend
      ports:
        - protocol: TCP
          port: 61616
